Bug 364169 - Reading contents from stdin: cannot switch encoding (also not choose per command option)
Summary: Reading contents from stdin: cannot switch encoding (also not choose per comm...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-10 06:58 UTC by H.H.
Modified: 2016-09-07 20:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.H. 2016-06-10 06:58:01 UTC
I read some content via std in:
someotherexecutables | kwrite -i

I cannot change the displayed encoding. I also cannot define it via command option (-e), the option is ignored.

Reproducible: Always
Comment 1 Christoph Cullmann 2016-09-07 20:43:17 UTC
Git commit 50c656517729bd6e2cbc21d20c7b640df6948eef by Christoph Cullmann.
Committed on 07/09/2016 at 20:42.
Pushed by cullmann into branch 'master'.

CHANGELOG: support --encoding together with --stdin

M  +3    -3    kate/kateapp.cpp
M  +2    -1    kate/kateapp.h
M  +2    -2    kate/kateappadaptor.cpp
M  +2    -1    kate/kateappadaptor.h
M  +1    -0    kate/main.cpp
M  +4    -0    kwrite/main.cpp

http://commits.kde.org/kate/50c656517729bd6e2cbc21d20c7b640df6948eef