CHANGELOG: support --encoding together with --stdin

BUG: 364169