kate/kateappadaptor.h
@@ -82,9 +82,10 @@ public Q_SLOTS:
      * helper to handle stdin input
      * open a new document/view, fill it with the text given
      * @param text text to fill in the new doc/view
+     * @param encoding encoding to set for the document, if any
      * @return success
      */
-    bool openInput(QString text);
+    bool openInput(QString text, QString encoding);
 
     /**
      * activate a given session
